<resources>
    <string name="app_name">Telescope-Pi Remote</string>
    <string name="action_settings">Settings</string>
    <string name="dialog_accept">Got it</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="connected">Connected</string>
    <string name="disconnected">"Disconnected"</string>
    <string name="already_connected">Already connected</string>
    <string name="error_unsupported">Bluetooth connection isn\'t supported on your device.</string>
    <string name="error_no_devices_found">No paired Bluetooth devices found</string>
    <string name="connection_error">Error during connection!</string>
    <string name="error">An error occurred!</string>
    <string name="bluetooth_disabled">Bluetooth disabled</string>
    <string name="bluetooth_enabled">Bluetooth enabled</string>
    <string name="bluetooth_must_be_enabled">Bluetooth must be enabled to use this app!</string>
    <string name="disconnect">Disconnect</string>
    <string name="connect">Connect</string>
    <string name="wifi">Wi-Fi</string>
    <string name="hotspot">Hotspot</string>
    <string name="connect_hotspot">Connect to the hotspot</string>
    <string name="indi_web_manager">INDI Web Manager</string>
    <string name="openfocuser_server">OpenFocuser server</string>
    <string name="shutdown">Shutdown</string>
    <string name="reboot">Reboot</string>
    <string name="select_network">Select a network</string>
    <string name="ip_address">IP address:</string>
    <string name="refresh">Refresh</string>
    <string name="unknown">unknown</string>
    <string name="select_device">Select a device:</string>
    <string name="about_activity_title">About Telescope-Pi</string>
    <string name="telescope_pi_description">
        "Material is the metaphor.\n\n"
        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"
    </string>
    <string name="title_activity_control_panel">ControlPanelActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="power_management">Power management:</string>
    <string name="indi_management">INDI Management:</string>
    <string name="network_management">Network management:</string>
    <string name="network_interface">Network interface:</string>
    <string name="select_ap_dialog_title">Select a Wi-Fi AP:</string>
    <string name="type_pswd_msg">Type password for Wi-Fi AP \"</string>
    <string name="ok">OK</string>
    <string name="no_wifi_aps">No Wi-Fi APs detected</string>
    <string name="wifi_signal">Wi-Fi signal</string>
    <string name="reboot_confirm_message">Do you really want to reboot Telescope-Pi?</string>
    <string name="shutdown_confirm_message">Do you really want to shutdown Telescope-Pi?</string>
    <string name="connect_to_wifi_question">Connect to Wi-Fi AP \"</string>
    <string name="wpa">WPA</string>
    <string name="wep">WEP</string>
    <string name="open_network">Open network</string>
    <string name="wifi_permission_request">Permission needed to connect to the AP</string>
</resources>
