<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ManagerActivity"
    tools:showIn="@layout/activity_manager">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/components_margin"
        android:text="@string/network_management"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/components_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/network_interface" />

        <TextView
            android:id="@+id/net_interface_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknown" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/components_margin">

        <TextView
            android:id="@+id/ip_descr_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="12dp"
            android:text="@string/ip_address" />

        <TextView
            android:id="@+id/ip_address_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="12dp"
            android:layout_toEndOf="@+id/ip_descr_label"
            android:layout_toRightOf="@+id/ip_descr_label"
            android:text="@string/unknown" />

        <ImageButton
            android:id="@+id/reload_ip_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/refresh"
            android:onClick="askIP"
            android:src="@drawable/refresh" />
    </RelativeLayout>

    <Switch
        android:id="@+id/wifi_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wifi" />

    <Button
        android:id="@+id/net_selection_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/components_margin"
        android:text="@string/select_network" />

    <Switch
        android:id="@+id/hotspot_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hotspot" />

    <Button
        android:id="@+id/hotspot_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/components_margin"
        android:text="@string/connect_hotspot" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/components_margin"
        android:text="@string/indi_management"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <Switch
        android:id="@+id/indi_web_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/components_margin"
        android:text="@string/indi_web_manager" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/components_margin"
        android:text="@string/power_management"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <ImageButton
        android:id="@+id/shutdown_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/components_margin"
        android:contentDescription="@string/shutdown"
        android:onClick="shutdown"
        android:src="@drawable/shutdown" />

    <ImageButton
        android:id="@+id/reboot_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/reboot"
        android:onClick="reboot"
        android:src="@drawable/restart" />

</LinearLayout>